--- a/src/mlpack/methods/pca/CMakeLists.txt
+++ b/src/mlpack/methods/pca/CMakeLists.txt
@@ -3,9 +3,6 @@
 set(SOURCES
   pca.hpp
   pca_impl.hpp
-  pca_util.hpp
-  pca_util.cpp
-  pca_main.h
 #  pca_nomain.hpp
 #  pca_nomain.cpp
 )
@@ -22,7 +19,7 @@ endforeach()
 set(MLPACK_SRCS ${MLPACK_SRCS} ${DIR_SRCS} PARENT_SCOPE)
 
 add_library(pcalib STATIC pca_main.cpp)
-target_link_libraries(pcalib mlpack ${MLPACK_LIBRARIES})
+target_link_libraries(pcalib ${MLPACK_LIBRARIES})
 
 add_cli_executable(pca)
 add_python_binding(pca)
