Added Cmake to generate go bindings

--- a/src/mlpack/bindings/go/CMakeLists.txt
+++ b/src/mlpack/bindings/go/CMakeLists.txt
@@ -1,14 +1,21 @@
-# Define the files we need to compile.
-# Anything not in this list will not be compiled into mlpack.
-set(SOURCES
+# Use this as add_go_binding(name)
+macro (add_go_binding name)
+ # create, e.g., libmlpack_go_pca.so.
+ add_library(mlpack_go_${name} SHARED ${CMAKE_SOURCE_DIR}/src/mlpack/methods/${name}/${name}_main.cpp)
+ target_link_libraries(mlpack_go_${name} mlpack ${MLPACK_LIBRARIES})
 
-)
+ # Now we also want to create the header file ${name}.h.
+ # But in order to use configure_file() with arguments, we actually
+ # have to create a separate file... more on that later.
 
-# Add directory name to sources.
-set(DIR_SRCS)
-foreach(file ${SOURCES})
-  set(DIR_SRCS ${DIR_SRCS} ${CMAKE_CURRENT_SOURCE_DIR}/${file})
-endforeach()
-# Append source (with directory name) to list of all mlpack sources (used at the
-# parent scope).
-set(MLPACK_SRCS ${MLPACK_SRCS} ${DIR_SRCS} PARENT_SCOPE)
+ # This command will create the .h file in, e.g.,
+ # build/src/mlpack/bindings/go/methods/pca.h, from the file
+ # src/mlpack/bindings/go/go_include.h.in.
+ add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/src/mlpack/bindings/go/${name}.h
+     COMMAND ${CMAKE_COMMAND}
+         -DGENERATE_H_IN=${CMAKE_SOURCE_DIR}/src/mlpack/bindings/go/go_include.h.in
+         -DGENERATE_H_OUT=${CMAKE_BINARY_DIR}/src/mlpack/bindings/go/${name}.h
+         -DPROGRAM_NAME=${name}
+         -P ${CMAKE_SOURCE_DIR}/CMake/GenerateGoInclude.cmake
+     DEPENDS ${CMAKE_SOURCE_DIR}/src/mlpack/bindings/go/go_include.h.in)
+endmacro ()
