--- a/src/mlpack/bindings/go/generate_go.h.in
+++ b/src/mlpack/bindings/go/generate_go.h.in
@@ -1,5 +1,5 @@
 /*
-* @file generate_cpp_${PROGRAM_NAME}.cpp
+* @file generate_h_${PROGRAM_NAME}.cpp
 * @author Yasmine Dumouchel
 *
 * This is an automatically-generated file that is used to generate the .cpp
@@ -45,5 +45,5 @@ int main(int /* argc */, char** /* argv */)
  // programName is defined in mlpack_main.hpp.
  CLI::RestoreSettings(programName);
 
- PrintCPP(*CLI::GetSingleton().doc, "${PROGRAM_NAME}");
+ PrintH(*CLI::GetSingleton().doc, "${PROGRAM_NAME}");
 }
