Perceptron model handling

--- a/src/mlpack/bindings/CMakeLists.txt
+++ b/src/mlpack/bindings/CMakeLists.txt
@@ -12,4 +12,5 @@ endforeach()
 
 set(MLPACK_SRCS ${MLPACK_SRCS} PARENT_SCOPE)
 set(MLPACK_PYXS ${MLPACK_PYXS} PARENT_SCOPE)
+set(MLPACK_GO ${MLPACK_GO} PARENT_SCOPE)
 set(DISABLE_CFLAGS ${DISABLE_CFLAGS} PARENT_SCOPE)
