Added go bindings printing functions

--- a/src/mlpack/methods/perceptron/CMakeLists.txt
+++ b/src/mlpack/methods/perceptron/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
-add_library(perceptronlib perceptron.cpp perceptron.h)
-target_link_libraries(perceptronlib  mlpack ${MLPACK_LIBRARIES})
+# add_library(perceptronlib perceptron.cpp perceptron.h)
+# target_link_libraries(perceptronlib  mlpack ${MLPACK_LIBRARIES})
 
 # Define the files we need to compile.
 # Anything not in this list will not be compiled into mlpack.
@@ -25,4 +25,4 @@ set(MLPACK_SRCS ${MLPACK_SRCS} ${DIR_SRCS} PARENT_SCOPE)
 
 # add_cli_executable(perceptron)
 add_python_binding(perceptron)
-# add_go_binding(perceptron)
+add_go_binding(perceptron)
