--- a/src/mlpack/bindings/go/CMakeLists.txt
+++ b/src/mlpack/bindings/go/CMakeLists.txt
@@ -1,19 +1,19 @@
 
 # Nothing in this directory will be compiled into mlpack.
 set(BINDING_SOURCES
-  get_arma_type.hpp
-  get_cython_type.hpp
-  get_numpy_type_char.hpp
+  get_type.hpp
   get_param.hpp
   get_printable_param.hpp
   go_option.hpp
-  import_decl.hpp
   print_class_defn.hpp
-  print_defn.hpp
+  print_defn_input.hpp
+  print_defn_output.hpp
   print_doc.hpp
   print_doc_functions.hpp
   print_doc_functions_impl.hpp
   print_input_processing.hpp
+  print_method_config.hpp
+  print_method_init.hpp
   print_output_processing.hpp
   print_cpp.hpp
   print_cpp.cpp
