Cmake for go bindings

--- a/src/mlpack/bindings/go/CMakeLists.txt
+++ b/src/mlpack/bindings/go/CMakeLists.txt
@@ -1,3 +1,8 @@
+# If we are not supposed to make Python bindings, define the macro so it does
+# nothing and leave this file.
+# if (NOT BUILD_GO_BINDINGS)
+#   not_found_return("Not building Go bindings.")
+# endif ()
 
 # Nothing in this directory will be compiled into mlpack.
 set(BINDING_SOURCES
@@ -5,27 +10,63 @@ set(BINDING_SOURCES
   get_param.hpp
   get_printable_param.hpp
   go_option.hpp
+  mlpack/arma_util.h
+  mlpack/arma_util.hpp
+  mlpack/cli_util.h
+  mlpack/cli_util.hpp
   print_class_defn.hpp
+  print_cpp.hpp
+  print_cpp.cpp
   print_defn_input.hpp
   print_defn_output.hpp
   print_doc.hpp
   print_doc_functions.hpp
   print_doc_functions_impl.hpp
-  print_input_processing.hpp
-  print_method_config.hpp
-  print_method_init.hpp
-  print_output_processing.hpp
-  print_cpp.hpp
-  print_cpp.cpp
   print_go.hpp
   print_go.cpp
   print_h.hpp
   print_h.cpp
+  print_input_processing.hpp
+  print_method_config.hpp
+  print_method_init.hpp
+  print_output_processing.hpp
   strip_type.hpp
 )
 
+# These are all the files we need to compile Go bindings for mlpack that are
+# not a part of mlpack itself.
+set(GO_SOURCES
+  mlpack/arma_util.cpp
+  mlpack/arma_util.h
+  mlpack/arma_util.hpp
+  mlpack/cli_util.cpp
+  mlpack/cli_util.h
+  mlpack/cli_util.hpp
+)
+
+# Set the include directories correctly.
+get_property(GO_INCLUDE_DIRECTORIES DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    PROPERTY INCLUDE_DIRECTORIES)
+set (GO_INCLDIRS "${GO_INCLUDE_DIRECTORIES}")
+
+add_custom_target(go_copy ALL DEPENDS mlpack)
+
+# Copy necessary files after making the mlpack/ directory.
+add_custom_command(TARGET go_copy PRE_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory
+        ${CMAKE_BINARY_DIR}/src/mlpack/bindings/go/mlpack/
+        ${CMAKE_BINARY_DIR}/src/mlpack/bindings/go/methods/)
+foreach(go_file ${GO_SOURCES})
+add_custom_command(TARGET go_copy PRE_BUILD
+    COMMAND ${CMAKE_COMMAND} ARGS -E copy
+        ${CMAKE_CURRENT_SOURCE_DIR}/${go_file}
+        ${CMAKE_BINARY_DIR}/src/mlpack/bindings/go/mlpack/)
+endforeach()
+
+
 # Add a macro to build a go binding.
 macro (add_go_binding name)
+
 
 # Create, e.g., libmlpack_go_pca.so.
 add_library(mlpack_go_${name} SHARED ${CMAKE_SOURCE_DIR}/src/mlpack/methods/${name}/${name}_main.cpp)
@@ -52,7 +93,7 @@ set_target_properties(generate_cpp_${name} PROPERTIES COMPILE_FLAGS
 add_custom_command(TARGET generate_cpp_${name} POST_BUILD
     COMMAND ${CMAKE_COMMAND}
         -DGENERATE_CPP_PROGRAM=${CMAKE_BINARY_DIR}/bin/generate_cpp_${name}
-        -DCPP_OUTPUT_FILE=${CMAKE_BINARY_DIR}/src/mlpack/bindings/go/${name}.cpp
+        -DCPP_OUTPUT_FILE=${CMAKE_BINARY_DIR}/src/mlpack/bindings/go/mlpack/${name}.cpp
         -P ${CMAKE_SOURCE_DIR}/CMake/GenerateCPP.cmake)
 
 add_custom_target(build_cpp_${name}
@@ -61,7 +102,6 @@ add_custom_target(build_cpp_${name}
     COMMENT "Building ${name}.cpp for Go binding ...")
 
 add_dependencies(build_cpp_${name} generate_cpp_${name})
-
 
 # Create .h file for C API, e.g. pca.h.
 add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/src/mlpack/bindings/go/generate_h_${name}.cpp
@@ -83,7 +123,7 @@ set_target_properties(generate_h_${name} PROPERTIES COMPILE_FLAGS
 add_custom_command(TARGET generate_h_${name} POST_BUILD
     COMMAND ${CMAKE_COMMAND}
         -DGENERATE_H_PROGRAM=${CMAKE_BINARY_DIR}/bin/generate_h_${name}
-        -DH_OUTPUT_FILE=${CMAKE_BINARY_DIR}/src/mlpack/bindings/go/${name}.h
+        -DH_OUTPUT_FILE=${CMAKE_BINARY_DIR}/src/mlpack/bindings/go/mlpack/${name}.h
         -P ${CMAKE_SOURCE_DIR}/CMake/GenerateH.cmake)
 
 add_custom_target(build_h_${name}
@@ -92,7 +132,6 @@ add_custom_target(build_h_${name}
     COMMENT "Building ${name}.h for Go binding ...")
 
 add_dependencies(build_h_${name} generate_h_${name})
-
 
 # Create .go file, pca.go.
 add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/src/mlpack/bindings/go/generate_go_${name}.cpp
@@ -114,7 +153,8 @@ set_target_properties(generate_go_${name} PROPERTIES COMPILE_FLAGS
 add_custom_command(TARGET generate_go_${name} POST_BUILD
     COMMAND ${CMAKE_COMMAND}
         -DGENERATE_GO_PROGRAM=${CMAKE_BINARY_DIR}/bin/generate_go_${name}
-        -DGO_OUTPUT_FILE=${CMAKE_BINARY_DIR}/src/mlpack/bindings/go/${name}.go
+        -DGO_OUTPUT_FILE=${CMAKE_BINARY_DIR}/src/mlpack/bindings/go/methods/${name}.go
+        -DGO_OUTPUT_FILE=${CMAKE_SOURCE_DIR}/src/mlpack/bindings/go/methods/${name}.go
         -P ${CMAKE_SOURCE_DIR}/CMake/GenerateGo.cmake)
 
 add_custom_target(build_go_${name}
@@ -123,5 +163,7 @@ add_custom_target(build_go_${name}
     COMMENT "Building ${name}.go for Go binding ...")
 
 add_dependencies(build_go_${name} generate_go_${name})
+add_dependencies(build_go_${name} build_cpp_${name})
+add_dependencies(build_go_${name} build_h_${name})
 
 endmacro ()
