--- a/src/mlpack/methods/neighbor_search/CMakeLists.txt
+++ b/src/mlpack/methods/neighbor_search/CMakeLists.txt
@@ -29,5 +29,7 @@ set(MLPACK_SRCS ${MLPACK_SRCS} ${DIR_SRCS} PARENT_SCOPE)
 # Add mlpack_knn and mlpack_kfn executables.
 add_cli_executable(knn)
 add_python_binding(knn)
+add_go_binding(knn)
 add_cli_executable(kfn)
 add_python_binding(kfn)
+add_go_binding(kfn)
