--- a/src/mlpack/methods/decision_tree/CMakeLists.txt
+++ b/src/mlpack/methods/decision_tree/CMakeLists.txt
@@ -27,3 +27,4 @@ set(MLPACK_SRCS ${MLPACK_SRCS} ${DIR_SRCS} PARENT_SCOPE)
 
 add_cli_executable(decision_tree)
 add_python_binding(decision_tree)
+#add_go_binding(decision_tree)
