--- a/src/mlpack/bindings/go/CMakeLists.txt
+++ b/src/mlpack/bindings/go/CMakeLists.txt
@@ -6,6 +6,7 @@
 
 # Nothing in this directory will be compiled into mlpack.
 set(BINDING_SOURCES
+  get_arma_type.hpp
   get_type.hpp
   get_param.hpp
   get_printable_param.hpp
